CodeFramework/objects/Apex_Configuration__mdt.object
<CustomObject>
    <description>Configuration settings for error messages, configuration parameters, etc. that are used in apex codes.</description>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime_Value__c</fullName>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Area_Value__c</fullName>
        <label>Text Area Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Configuration</label>
    <pluralLabel>Apex Configurations</pluralLabel>
</CustomObject>